Fix: card is not visible in Spotcues Mobile App.

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -47,6 +47,9 @@ body {
     }
   }
 }
+.wm-app.wm-spotcues-app >app-root {
+  height: auto;
+}
 /* for dialog which gets created in new view*/
 .app-view {
   position: absolute;
